--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.scraply</groupId>
-	<artifactId>ohscrap</artifactId>
+	<groupId>io.mandrel</groupId>
+	<artifactId>mandrel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -11,6 +11,12 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
@@ -58,6 +64,28 @@
 			<version>5.0.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-core_2.11</artifactId>
+			<version>1.3.11</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-jaxrs_2.11</artifactId>
+			<version>1.3.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>swagger-ui</artifactId>
+			<version>2.0.24</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.ning</groupId>
@@ -80,11 +108,16 @@
 			<artifactId>lombok</artifactId>
 			<version>0.10.8</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>net.sourceforge</groupId> -->
-		<!-- <artifactId>htmlcleaner</artifactId> -->
-		<!-- <version>2.2</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>net.sourceforge.htmlcleaner</groupId>
+			<artifactId>htmlcleaner</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
@@ -97,6 +130,17 @@
 			<version>15.0</version>
 		</dependency>
 
+		<!-- <dependency> -->
+		<!-- <groupId>org.liquibase</groupId> -->
+		<!-- <artifactId>liquibase-core</artifactId> -->
+		<!-- <version>2.1.0</version> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.boot</groupId> -->
+		<!-- <artifactId>spring-boot-starter-jdbc</artifactId> -->
+		<!-- <version>${boot.version}</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -139,10 +183,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>pl.project13.maven</groupId> -->
-<!-- 				<artifactId>git-commit-id-plugin</artifactId> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
