--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,18 @@
 			<version>15.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hyperic</groupId>
+			<artifactId>sigar</artifactId>
+			<version>1.6.5.132</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hyperic</groupId>
+			<artifactId>sigar-dist</artifactId>
+			<version>1.6.5.132</version>
+			<type>zip</type>
+		</dependency>
+
 		<!-- <dependency> -->
 		<!-- <groupId>org.liquibase</groupId> -->
 		<!-- <artifactId>liquibase-core</artifactId> -->
@@ -201,6 +213,48 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<id>unpack-dependencies</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<includes>**/sigar-bin/lib/*</includes>
+							<excludes>**/sigar-bin/lib/*jar</excludes>
+							<includeGroupIds>org.hyperic</includeGroupIds>
+							<includeArtifactIds>sigar-dist</includeArtifactIds>
+							<outputDirectory>
+								${project.build.directory}/depends
+								<!-- or: ${project.basedir}/depends -->
+							</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Maven Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
 </project>
