--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,3 @@
-info:
-    artifact: ${project.artifactId}
-    name: ${project.name}
-    description: ${project.description}
-    version: ${project.version}
-
-endpoints:
-    shutdown:
-        enabled: false
-        
 environments:
     dev:
         url: http://dev.bar.com
@@ -21,6 +11,27 @@ network:
         multicast:
             enabled: false
 
+server:
+    port: 8080
+    #address:
+    
+security:
+    user:
+        name: admin
+        password: admin
+        role: ADMIN
+
+spring:
+    pidfile: application.pid
+    groovy:
+        template:
+            check-template-location: false
+
+graphite:
+    enabled: false
+    port: 2003
+    host: localhost
+    
 logging:
     level:
         org.springframework.web: INFO
@@ -29,3 +40,21 @@ logging:
         org.apache.cxf.interceptor.LoggingInInterceptor: DEBUG
         org.apache.cxf.interceptor.LoggingOutInterceptor: DEBUG
         org.hibernate: ERROR
+        
+management:
+    context-path: /admin
+    security:
+        enabled: true
+        role: ADMIN
+        
+info:
+    artifact: @project.artifactId@
+    name: @project.name@
+    description: @project.description@
+    version: @project.version@
+
+endpoints:
+    sensitive: true
+    shutdown:
+        enabled: true
+
