--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.0.RELEASE</version>
-	</parent>
 
 	<groupId>io.mandrel</groupId>
 	<artifactId>mandrel</artifactId>
@@ -15,8 +10,11 @@
 
 	<properties>
 		<start-class>io.mandrel.Main</start-class>
+		
 		<cxf.version>3.0.1</cxf.version>
 		<sigar.version>1.6.5.132</sigar.version>
+		<spring-boot.version>1.2.1.RELEASE</spring-boot.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -53,7 +51,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.jaxrs</groupId>
 			<artifactId>jackson-jaxrs-json-provider</artifactId>
-			<version>${jackson.version}</version>
+			<version>2.4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
 		</dependency>
 
 		<dependency>
@@ -191,26 +194,26 @@
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.dropwizard.metrics</groupId>
-			<artifactId>metrics-servlet</artifactId>
-			<version>${dropwizard-metrics.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.dropwizard.metrics</groupId>
-			<artifactId>metrics-httpasyncclient</artifactId>
-			<version>${dropwizard-metrics.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.dropwizard.metrics</groupId>
-			<artifactId>metrics-logback</artifactId>
-			<version>${dropwizard-metrics.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.dropwizard.metrics</groupId>
-			<artifactId>metrics-jvm</artifactId>
-			<version>${dropwizard-metrics.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.dropwizard.metrics</groupId> -->
+<!-- 			<artifactId>metrics-servlet</artifactId> -->
+<!-- 			<version>${dropwizard-metrics.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.dropwizard.metrics</groupId> -->
+<!-- 			<artifactId>metrics-httpasyncclient</artifactId> -->
+<!-- 			<version>${dropwizard-metrics.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.dropwizard.metrics</groupId> -->
+<!-- 			<artifactId>metrics-logback</artifactId> -->
+<!-- 			<version>${dropwizard-metrics.version}</version> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.dropwizard.metrics</groupId> -->
+<!-- 			<artifactId>metrics-jvm</artifactId> -->
+<!-- 			<version>${dropwizard-metrics.version}</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-graphite</artifactId>
@@ -220,6 +223,18 @@
 			<artifactId>spock-core</artifactId>
 		</dependency>
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<resources>
@@ -237,15 +252,28 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<verbose>true</verbose>
+					<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
+
 
 			<!-- need to copy/unzip the native libraries to the target directory and 
 				tell SystemInfoFactory where they are -->
@@ -310,7 +338,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -324,6 +351,8 @@
 				<configuration>
 					<keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
 					<createDependencyReducedPom>true</createDependencyReducedPom>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>uber</shadedClassifierName>
 					<filters>
 						<filter>
 							<artifact>*:*</artifact>
@@ -348,7 +377,6 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>main</id>
 						<phase>package</phase>
 						<goals>
 							<goal>shade</goal>
@@ -389,15 +417,7 @@
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
-									<resource>META-INF/wsdl.plugin.xml</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
-									<resource>META-INF/tools.service.validator.xml</resource>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer">
-									<resource>META-INF/cxf/java2wsbeans.xml</resource>
+									<resource>META-INF/wsdl.plugin.xml</resource>                                     <!-- Add this to enable loading of DTDs <ignoreDtd>false</ignoreDtd> -->
 								</transformer>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
