--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 	<description>The crawler at scale</description>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
 		<start-class>io.mandrel.Main</start-class>
 
 		<cxf.version>3.0.1</cxf.version>
@@ -484,6 +487,65 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<artifactId>jdeb</artifactId>
+				<groupId>org.vafer</groupId>
+				<version>1.0.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jdeb</goal>
+						</goals>
+						<configuration>
+							<verbose>true</verbose>
+							<controlDir>${basedir}/src/deb/control</controlDir>
+							<dataSet>
+								<data>
+									<!-- use the filtered one from the resources plugin -->
+									<src>target/generated-resources/appassembler/jsw/mandrel/bin/</src>
+									<type>directory</type>
+									<excludes>*.bat, .DS_Store, *.exe</excludes>
+									<mapper>
+										<type>perm</type>
+										<prefix>/usr/share/mandrel/bin</prefix>
+										<filemode>755</filemode>
+										<user>root</user>
+										<group>root</group>
+									</mapper>
+								</data>
+								<data>
+									<src>target/generated-resources/appassembler/jsw/mandrel/lib/</src>
+									<includes>*.jar</includes>
+									<type>directory</type>
+									<mapper>
+										<type>perm</type>
+										<prefix>/usr/share/mandrel/lib</prefix>
+										<user>root</user>
+										<group>root</group>
+									</mapper>
+								</data>
+								<data>
+									<type>link</type>
+									<symlink>true</symlink>
+									<linkName>/etc/init.d/mandrel</linkName>
+									<linkTarget>/usr/share/mandrel/bin/mandrel</linkTarget>
+								</data>
+								<data>
+									<src>target/generated-resources/appassembler/jsw/mandrel/conf/</src>
+									<type>directory</type>
+									<mapper>
+										<type>perm</type>
+										<prefix>/usr/share/mandrel/conf/</prefix>
+										<user>root</user>
+										<group>root</group>
+									</mapper>
+								</data>
+							</dataSet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>rpm-maven-plugin</artifactId>
